--- a/001-JavaSE/JavaWeb/FruitSystem/web/WEB-INF/web.xml
+++ b/001-JavaSE/JavaWeb/FruitSystem/web/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-<!--登陆请求-->
+    <!--登陆请求-->
     <servlet>
         <servlet-name>login</servlet-name>
         <servlet-class>com.fruit.servlet.loginServlet</servlet-class>
@@ -11,5 +11,23 @@
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <!--  aqua请求  -->
+    <servlet>
+        <servlet-name>aqua</servlet-name>
+        <servlet-class>com.fruit.servlet.AquaServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>aqua</servlet-name>
+        <url-pattern>/aqua</url-pattern>
+    </servlet-mapping>
+    <!--  marin请求  -->
+    <servlet>
+        <servlet-name>marin</servlet-name>
+        <servlet-class>com.fruit.servlet.MarinServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>marin</servlet-name>
+        <url-pattern>/marin</url-pattern>
     </servlet-mapping>
 </web-app>
