✅ 更新fruit进度，查询列表

--- a/001-JavaSE/JavaWeb/fruitSaleSystem/web/WEB-INF/web.xml
+++ b/001-JavaSE/JavaWeb/fruitSaleSystem/web/WEB-INF/web.xml
@@ -3,4 +3,35 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <!-- 配置thymeleaf -->
+    <!--视图前缀-->
+    <context-param>
+        <param-name>view-prefix</param-name>
+        <param-value>/WEB-INF/pages/</param-value>
+    </context-param>
+    <!--视图后缀-->
+    <context-param>
+        <param-name>view-suffix</param-name>
+        <param-value>.html</param-value>
+    </context-param>
+
+    <!--配置first Servlet-->
+    <servlet>
+        <servlet-name>firstServlet</servlet-name>
+        <servlet-class>com.fruit.yuluo.servlet.firstServlet.firstServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>firstServlet</servlet-name>
+        <url-pattern>/firstReq</url-pattern>
+    </servlet-mapping>
+    
+    <!--配置水果servlet-->
+    <servlet>
+        <servlet-name>fruitList</servlet-name>
+        <servlet-class>com.fruit.yuluo.servlet.fruitServlet.fruitServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>fruitList</servlet-name>
+        <url-pattern>/fruitList</url-pattern>
+    </servlet-mapping>
 </web-app>
