--- a/001-JavaSE/JavaWeb/IOTCards/resources/jdbc.properties
+++ b/001-JavaSE/JavaWeb/IOTCards/resources/jdbc.properties
@@ -1,4 +1,24 @@
-DRIVER=com.mysql.cj.jdbc.Driver
-URL=jdbc:mysql://xxx.xxx.xxx.xxx:3306/xxx?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
-USER=xxx
-PWD=xxx
+# cooler
+db1.DRIVER=com.mysql.cj.jdbc.Driver
+db1.URL=jdbc:mysql://xxx.xxx.xxx.xxx:3306/xxx?useSSL=false&serverTimezone=UTC
+db1.USER=xxx
+db1.PWD=xxx
+
+# switch
+db2.DRIVER=com.mysql.cj.jdbc.Driver
+db2.URL=jdbc:mysql://xxx.xxx.xxx.xxx:3306/xxx?useSSL=false&serverTimezone=UTC
+db2.USER=xxx
+db2.PWD=xxx
+
+# pool
+db.POOL.INITIAL_SIZE=5
+db.POOL.MIN_IDLE=5
+db.POOL.MAX_ACTIVE=20
+db.POOL.MAX_WAIT=60000
+db.POOL.VALIDATION_QUERY=SELECT 1
+db.POOL.TEST_ON_BORROW=true
+db.POOL.TEST_WHILE_IDLE=true
+db.POOL.TIME_BETWEEN_EVICTION_RUNS_MILLIS=30000
+db.POOL.REMOVE_ABANDONED=true
+db.POOL.REMOVE_ABANDONED_TIMEOUT=180
+db.POOL.LOG_ABANDONED=true
