--- a/001-JavaSE/JavaWeb/QQZone/web/WEB-INF/web.xml
+++ b/001-JavaSE/JavaWeb/QQZone/web/WEB-INF/web.xml
@@ -15,7 +15,7 @@
     <!--2 配置过滤器编码-->
     <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
-        <filter-class>com.fruit.yuluo.myssm.filter.CharacterEncodingFilter</filter-class>
+        <filter-class>com.muxia.qqzone.myssm.filter.CharacterEncodingFilter</filter-class>
         <init-param>
             <param-name>encoding</param-name>
             <param-value>UTF-8</param-value>
@@ -27,7 +27,7 @@
     </filter-mapping>
     <filter>
         <filter-name>OpenSessionInViewFilter</filter-name>
-        <filter-class>com.fruit.yuluo.myssm.filter.OpenSessionViewFilter</filter-class>
+        <filter-class>com.muxia.qqzone.myssm.filter.OpenSessionViewFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>OpenSessionInViewFilter</filter-name>
