--- a/001-JavaSE/JavaWeb/QQZone/web/WEB-INF/web.xml
+++ b/001-JavaSE/JavaWeb/QQZone/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <!--1 配置thymeleaf前后缀-->
     <context-param>
         <param-name>view-prefix</param-name>
-        <param-value>/WEB-INF/templates/</param-value>
+        <param-value>/</param-value>
     </context-param>
     <context-param>
         <param-name>view-suffix</param-name>
